added all works for english classes and started working on theory of probability - work

--- a/Theory of Probability/ThPr.tex
+++ b/Theory of Probability/ThPr.tex
@@ -1,3 +1,41 @@
-\begin{center}
-\begin{Large}Типовой расчет по Теории Вероятности\end{Large}\\
-Зенковой Дарьи, М3336 \end{center}
+\documentclass{article}
+\usepackage[utf8]{inputenc}
+\usepackage[russian, english]{babel}
+\usepackage[T2A]{fontenc}
+\usepackage{mathtools}
+\usepackage{units}
+
+\title{Типовой расчет по Теории Вероятности}
+\author{Зенкова Дарья, M3336}
+\date{Вариант 2}
+
+
+
+\begin{document}
+\pagenumbering{gobble}
+\maketitle
+\newpage
+\pagenumbering{arabic}
+
+\section{Непосредственный подсчёт вероятностей в рамках классической схемы. Теоремы сложения и умножения.}
+
+\paragraph{Задача}
+В коробке лежат карандаши: двенадцать красных и восемь зеленых. Наудачу извлекают три. Какова вероятность того, что среди извлечённых будет хотя бы один красный карандаш?
+\paragraph{Решение}
+  
+\section{Геометрические вероятности.}
+\paragraph{Задача}
+Из промежутка \({[{-2}, 2]}\) наудачу выбраны два числа \(\xi_1\) и \(\xi_2\). Найти вероятность того, что квадратное уравнение \(x^2+\xi_1x+\xi_2=0\) будет иметь вещественные корни.
+\paragraph{Решение}
+  
+\section{Формула полной вероятности. Формула Байеса.}
+\paragraph{Задача}
+Два стрелка \(A\) и \(B\) поочередно стреляют в мишень до первого попадания, но не более двух раз каждый. Вероятноть попадания при одном выстреле для \(A\) равна \(0.8\), для \(B\) -- \(0.6\). Первый стрелок опеределяется по жребию. Для этого кидается игральный кубик. Если выпадает число, кратное трём, то начинает \(A\), иначе первым стреляет \(B\). В результате стрельбы выиграл стрелок \(B\). Какова вероятность, что он стрелял первым?
+\paragraph{Решение}
+  
+\section{Схема Бернулли.}
+\paragraph{Задача}
+Производится четыре выстрела по мишени, вероятность попадания при каждом выстреле равна \(\nicefrac{2}{3}\). Найти вероятность того, что в мишень попадут не менее двух раз.
+\paragraph{Решение}
+
+\end{document}
