homework is ready

--- a/Theory of Probability/ThPr.tex
+++ b/Theory of Probability/ThPr.tex
@@ -9,7 +9,7 @@
 \usepgfplotslibrary{fillbetween}
 \newcommand\abs[1]{\left|#1\right|}
 
-\title{Типовой расчет по Теории Вероятности}
+\title{Типовой расчет по Теории Вероятностей}
 \author{Зенкова Дарья, M3336}
 \date{Вариант 2}
 
@@ -42,8 +42,8 @@
 Из промежутка \({[{-2}, 2]}\) наудачу выбраны два числа \(\xi_1\) и \(\xi_2\). Найти вероятность того, что квадратное уравнение \(x^2+\xi_1x+\xi_2=0\) будет иметь вещественные корни.
 \subparagraph{Решение}
 \[\Omega =\ \{{-2}\leq\xi_1\leq2, {-2}\leq\xi_2\leq2\}\]
-Уравнение \(x^2+\xi_1x+\xi_2=0\) имеет вещественные корни \(\iff D = \xi_1^2 - 4\xi_2 \geq 0\). \\
-Таким образом, \(A = \ \{\xi_2 \leq \frac{\xi_1^2}{4}, {-2}\leq\xi_1\leq2, {-2}\leq\xi_2\leq2\}\).\\
+\indent\indentУравнение имеет вещественные корни  \(\iff D = \xi_1^2 - 4\xi_2 \geq 0\). \\
+\indent\indentТаким образом, \(A = \ \{\xi_2 \leq \frac{\xi_1^2}{4}, {-2}\leq\xi_1\leq2, {-2}\leq\xi_2\leq2\}\).\\
 
 \begin{tikzpicture} 
   \begin{axis}[
@@ -72,14 +72,35 @@
 \[p(A) = \frac{\mu(A)}{\mu(\Omega)} = \frac{28}{3\cdot16} = \frac{7}{12}\]
 \subparagraph{Ответ}
 \[\frac{7}{12}\]
+\newpage
+
 \section{Формула полной вероятности. Формула Байеса.}
 \paragraph{Задача}
 Два стрелка \(A\) и \(B\) поочередно стреляют в мишень до первого попадания, но не более двух раз каждый. Вероятноть попадания при одном выстреле для \(A\) равна \(0.8\), для \(B\) -- \(0.6\). Первый стрелок опеределяется по жребию. Для этого кидается игральный кубик. Если выпадает число, кратное трём, то начинает \(A\), иначе первым стреляет \(B\). В результате стрельбы выиграл стрелок \(B\). Какова вероятность, что он стрелял первым?
-\paragraph{Решение}
-  
+\subparagraph{Решение} \mbox{} \\
+\[H = \{3, 6\} \text{ -- первым стреляет \(A\)} \] 
+\[\overline{H} = \{1, 2, 4, 5\}  \text{ -- первым стреляет \(B\)} \]
+\[p(H) = \frac{2}{6} = \frac{1}{3} \]
+\[p(\overline{H}) = \frac{4}{6} = \frac{2}{3} \]
+\[B = \{\text{Выиграл стрелок \(B\)}\}\]
+\[p(B|H) \text{ -- \(A\) использовал обе попытки и не попал}\]
+\[p(B|H) = \frac{2}{10}\cdot\frac{2}{10}\cdot(\frac{6}{10} + \frac{4}{10}\cdot\frac{6}{10}) = \frac{42}{125} \]
+\[p(B|\overline{H}) \text{ -- \(B\) попал либо с первой, либо со второй попытки}\]
+\[p(B|\overline{H}) = \frac{6}{10} + \frac{4}{10}\cdot\frac{6}{10} = \frac{21}{25}\]
+\[p(\overline{H}|B) = \frac{p(\overline{H})\cdot p(B|\overline{H})}{p(H)\cdot p(B|H) + p(\overline{H})\cdot p(B|\overline{H})} = \frac{5}{6} \]
+\subparagraph{Ответ}
+\[\frac{5}{6}\]
+\newpage
+
 \section{Схема Бернулли.}
 \paragraph{Задача}
 Производится четыре выстрела по мишени, вероятность попадания при каждом выстреле равна \(\nicefrac{2}{3}\). Найти вероятность того, что в мишень попадут не менее двух раз.
-\paragraph{Решение}
-
+\subparagraph{Решение}
+\[A = \{\text{Одним выстрелом попали в мишень}\}\]
+\[p = p(A) = \frac{2}{3}\]
+\[q = 1 - p = \frac{1}{3}\]
+\[n = 4\]
+\[P_4(2, 4) = C^2_4\left(\frac{2}{3}\right)^2\left(\frac{1}{3}\right)^2+C^3_4\left(\frac{2}{3}\right)^3\left(\frac{1}{3}\right)^1+C^4_4\left(\frac{2}{3}\right)^4\left(\frac{1}{3}\right)^0 = \frac{24+32+16}{81} = \frac{8}{9} \]
+\subparagraph{Ответ}
+\[\frac{8}{9}\]
 \end{document}
