some minor fixes

--- a/university/Theory of Probability/term6/thPrTR.tex
+++ b/university/Theory of Probability/term6/thPrTR.tex
@@ -84,7 +84,7 @@
 \]
 \item[б)] \(\textbf{E}Z = -1\), \(\textbf{D}Z = 9\), \(\textbf{cov}(X,Z) = -3\)
 \end{itemize}
-
+\newpage:print
 \section{Регрессия. Случай дискретных случайных величин}
 \subsection{Задача}
 Случайный вектор \((X,Y)\) задан матрией распределения:
